--- a/bfs.ipynb
+++ b/bfs.ipynb
@@ -5,6 +5,7 @@
    "id": "81b32cd9",
    "metadata": {},
    "source": [
+    "## BFS(Breadth-First Search\n",
     "### Grafik tanımı yapıyoruz"
    ]
   },
